--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
     width: 493px;
     height: 440px;
     border-radius: 4px;
-    box-shadow: 0px 1px 2px rgba(20, 19, 19, 0.2);
+    box-shadow: 55px 13px 27px rgb(157, 158, 151);
     padding: 0.15%;
+    position: relative;
+    z-index: 2;
+    opacity: 0.9;
   }
